dataset1235/2025-2/610742602/users/1972734523/executions/677928262_3691284457.log
== RUN (2025-08-28 21:42:57)
-- CODE: 
prova_1= float(input("Nota da prova 1:"))
prova_2=float(input("Nota da prova 2:"))
prova_3=float(input("Nota da prova 3:"))
prova_4=float(intup("Nota da prova 4:"))

media_ponderada=((prova_1*1)+(prova_2*2)+(prova_3*3)+(prova_4*4))/(1+2+3+4)

prit (round(media_ponderada,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prova_4=float(intup("Nota da prova 4:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prova_4=float(intup("Nota da prova 4:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prova_4=float(intup("Nota da prova 4:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prova_4=float(intup("Nota da prova 4:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prova_4=float(intup("Nota da prova 4:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prova_4=float(intup("Nota da prova 4:"))
                  ^^^^^
NameError: name 'intup' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:43:16)
-- CODE: 
prova_1= float(input("Nota da prova 1:"))
prova_2=float(input("Nota da prova 2:"))
prova_3=float(input("Nota da prova 3:"))
prova_4=float(input("Nota da prova 4:"))

media_ponderada=((prova_1*1)+(prova_2*2)+(prova_3*3)+(prova_4*4))/(1+2+3+4)

prit (round(media_ponderada,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prit (round(media_ponderada,2))
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prit (round(media_ponderada,2))
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prit (round(media_ponderada,2))
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prit (round(media_ponderada,2))
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prit (round(media_ponderada,2))
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    prit (round(media_ponderada,2))
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:43:44)
-- CODE: 
prova_1= float(input("Nota da prova 1:"))
prova_2=float(input("Nota da prova 2:"))
prova_3=float(input("Nota da prova 3:"))
prova_4=float(input("Nota da prova 4:"))

media_ponderada=((prova_1*1)+(prova_2*2)+(prova_3*3)+(prova_4*4))/(1+2+3+4)

print (round(media_ponderada,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Nota da prova 1:Nota da prova 2:Nota da prova 3:Nota da prova 4:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Nota da prova 1:Nota da prova 2:Nota da prova 3:Nota da prova 4:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Nota da prova 1:Nota da prova 2:Nota da prova 3:Nota da prova 4:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Nota da prova 1:Nota da prova 2:Nota da prova 3:Nota da prova 4:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Nota da prova 1:Nota da prova 2:Nota da prova 3:Nota da prova 4:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Nota da prova 1:Nota da prova 2:Nota da prova 3:Nota da prova 4:7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
